# Ashigaru-Search

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  rrproxy.py
ashigaru/: __init__.py  cli.py  config.py  egress.py  failures.py  guard.py  llm.py  mcp_server.py  orchestrator.py  rag_index.py  registry.py  sekisho.py  sources.py  tok.py  toolproto.py  worker.py
ashigaru/emaki/: __init__.py  build.py  cluster.py  distill.py  edge_types.yaml  edges.py  graph.py  library.py  schema.py
ashigaru/tools/: emaki.py  rag.py  web.py  x_search.py
docker/: Dockerfile  SEARCH_SETUP.md  docker-compose.yml
docker/searxng/: settings.yml
docs/: FLEET-RECIPE.md  KURA-Emaki.md  REGIONAL-SEARCH.md
examples/: emaki_no_llm.sh  quickstart.md
examples/corpus/: moe.md  quantization.md  sglang.md  vllm.md
tests/: test_egress.py  test_emaki.py  test_guard_failures.py  test_recall_commander.py  test_sekisho.py  test_smoke.py  test_sources.py  test_web_throttle.py  test_x_search.py
