[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ashigaru-search"
version = "0.2.0"
description = "A fleet of small local LLMs (ashigaru = foot-soldiers) that fan out to search the web (SearXNG) and local docs, then synthesize a cited answer. Any OpenAI-compatible model can command or scout."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Lna-Lab" }]
keywords = ["llm", "agents", "search", "rag", "vllm", "searxng", "mcp", "local-llm", "moe"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "rank-bm25>=0.2.2",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
extract = ["trafilatura>=1.8"]   # nicer main-text extraction for fetch_url
pdf = ["pypdf>=4.0"]             # index .pdf in local RAG
emaki = ["sentence-transformers>=2.2"]  # opt-in embedding backend for KURA-Emaki clustering
# [all] deliberately omits [emaki] (sentence-transformers pulls a heavy torch stack); the default
# TF-IDF clustering needs nothing extra — install .[all,emaki] only if you want `ashigaru-emaki --embed`.
all = ["mcp>=1.2", "trafilatura>=1.8", "pypdf>=4.0"]

[project.urls]
Homepage = "https://github.com/lna-lab/Ashigaru-Search"
Repository = "https://github.com/lna-lab/Ashigaru-Search"

[project.scripts]
ashigaru = "ashigaru.cli:main"
ashigaru-index = "ashigaru.rag_index:main"
ashigaru-emaki = "ashigaru.emaki.build:main"
ashigaru-mcp = "ashigaru.mcp_server:main"

[tool.setuptools]
packages = ["ashigaru", "ashigaru.tools", "ashigaru.emaki"]

[tool.setuptools.package-data]
"ashigaru.emaki" = ["edge_types.yaml"]
